--- a/styles.css
+++ b/styles.css
@@ -1,73 +1,41 @@
+body{
+  text-align: center;
+  background-color:  #CDFEAA;
+  color: #437A16;
+  font-size: 20px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  
+}
 
-    
+p {
+  line-height: 1.4;
+}
 
-	
-      h1 {
-        margin: 0;
-        font-size: 35px;
-        font-weight: initial;
-      }
+a {
+  outline: none;
+  text-decoration: none;
+  padding: 2px 1px 0;
+}
 
-	  h2 {
-        margin: 0;
-        font-size: 20px;
-        font-weight: initial;
-      }
-      graphic-element,
-      inner-column {
-        /* custom elements are inline by default */
-        display: block;
-      }
-      
-      /* structure */
-      inner-column {
-        width: 98%;
-        max-width: 740px;
-        margin-right: auto;
-        margin-left: auto;
-        padding: 2rem;
-      }
-	  
-   
-      /* theme */
-      body {
-        font-family: 'Georgia', serif;
-        padding-top: 90px;
-        padding-bottom: 20vh;
-      }
-      .site-header inner-column {
-		text-align: center;
-   
-      }
-      .site-header .info {
-        margin-left: 1rem;
-		
-      }
-      .info {
-        font-size: 18px;
-        line-height: 1.3;
-        letter-spacing: .02em;
-		text-align:center;
+a:link {
+  color: #265301;
+}
 
-      }
+a:visited {
+  color: #437A16;
+}
 
-	  img{
-		display:block;
-		margin:auto;
-		}
+a:focus {
+  border-bottom: 1px solid;
+  background: #BAE498;
+}
 
-	.page-content h2, p {
-		text-align:center;
-		
+a:hover {
+  border-bottom: 1px solid;
+  background: #CDFEAA;
+}
 
-	}
-
-	
-
-      
-      @media (min-width: 375px) {
-        .company-name {
-          font-size: 23px;
-        }
-      }
-    
+a:active {
+  background: #265301;
+  color: #CDFEAA;
+}
